--- a/findly-builder/src/app/components/weights/weights.component.html
+++ b/findly-builder/src/app/components/weights/weights.component.html
@@ -6,9 +6,12 @@
     <ng-container *ngIf="!loadingContent">
     <div class="header-sec-stopwords">
         <div class="title">{{'weights.Weights'| translate}}</div>
+        >
         <div class="restore_text" *ngIf="weights.length">
+            <span class="lable_text"  (click)="openAddNewWeight()"><img src="assets/icons/editor/plus-add.svg" class="mr-2" >{{'weights.add_rankable_field'| translate}}</span>
             <span class="lable_text" (click)="restoreWeights();"><img src="assets/icons/return_black.svg">{{'weights.reset_to_default' | translate}}</span>
             <span class="clock_img d-none"><img src="assets/icons/clock.svg"></span> 
+
         </div>                   
     </div> 
     <!-- DATA TABLE START HERE -->
@@ -51,9 +54,8 @@
                 </div>
             </perfect-scrollbar>
             <div class="weightsFooter">
-                <div class="add_btn_sec">
-                    <button class="kr-sg-button-secondary btn_lg" (click)="openAddNewWeight()"><img src="assets/icons/editor/plus-add.svg" class="mr-2" >{{'weights.add_rankable_field'| translate}}</button>
-                </div>
+                <!-- <div class="add_btn_sec">
+                </div> -->
                 <div class="cancel_save_sec mr-5">
                     <button [ngClass]="{'d-none':!weights.length}" class="kr-sg-button-secondary btn_lg" [disabled]="disableCancle" (click)="setDataToActual()">{{'weights.cancel'| translate}}</button>
                     <button [ngClass]="{'d-none':!weights.length}" class="kr-sg-button-primary btn_lg" (click)="addOrUpddate(weights)">{{'weights.save_weights' | translate}}</button>
