--- a/findly-builder/src/app/components/settings/settings.component.html
+++ b/findly-builder/src/app/components/settings/settings.component.html
@@ -70,7 +70,7 @@
                         <div class="kr-sg-input-text mb-4">
                             <div class="label-text title">App Id</div>
                             <input type="text" autocomplete="off" id = "clipAppID" name="appID" disabled 
-                               class="input-text" [value]="listData.accountId">
+                               class="input-text" [value]="botID">
                         </div>
                     </div>
                     <div class="col-2 mt-1r">
