--- a/findly-builder/src/app/components/result-ranking/result-ranking.component.html
+++ b/findly-builder/src/app/components/result-ranking/result-ranking.component.html
@@ -168,11 +168,11 @@
                                                  <img *ngIf ="!actLog.selected" src="assets/icons/accordian-close.svg" class="ml-8" > 
                                                  <img *ngIf ="actLog.selected" src="assets/icons/caretDown.svg" class="ml-8" >
                                                  <div class=" col-lg-7" [ngClass] = " actLog.selected ? 'action-header active-header' : 'action-header wrapper' " *ngIf ="actLog.target.contentType == 'page'">{{actLog.target.contentInfo.title}}</div>
-                                                 <div class=" col-lg-7" [ngClass] = " actLog.selected ? 'action-header active-header' : 'action-header wrapper' " *ngIf ="actLog.target.contentType == 'faq'">{{actLog.target.contentInfo.question}}</div> 
+                                                 <div class=" col-lg-7" [ngClass] = " actLog.selected ? 'action-header active-header' : 'action-header wrapper' " *ngIf ="actLog.target.contentType == 'faq'">{{actLog.target.contentInfo._source.question}}</div> 
                                                  <div class=" col-lg-7" [ngClass] = " actLog.selected ? 'action-header active-header' : 'action-header wrapper' " *ngIf ="actLog.target.contentType == 'task'">{{actLog.target.contentInfo.lname}}</div>  
                                                 <div class="action-header pl-pr-0  col-lg-2" >
                                                     <img src="assets/icons/help.svg" class="ml-1"> 
-                                                    <span class="status" >{{'resultRanking.pinned' | translate}}</span> 
+                                                    <span class="status" >{{actLog.logs[0].action}}</span> 
                                                 </div> 
                                                 <div class="time col-lg-2" id="displayTime">{{time}}
                                                 </div> 
@@ -181,7 +181,7 @@
                                         </a>
                                         <div id="demo_{{i}}" class="collapse" >
                                             <p class="action-desc" *ngIf ="actLog.target.contentType == 'page'"> {{actLog.target.contentInfo.searchResultPreview}} </p>  
-                                            <p class="action-desc" *ngIf ="actLog.target.contentType == 'faq'"> {{faqDesc}} </p>  
+                                            <p class="action-desc" *ngIf ="actLog.target.contentType == 'faq'"> {{actLog.target.contentInfo._source.defaultAnswers[0].payload}} </p>  
                                             <p class="action-desc" *ngIf ="actLog.target.contentType == 'task'"> {{actLog.target.contentInfo.lname}} </p>  
                                             <!-- <button class="btn-rem">Remove</button> -->
                                             <div class="action-on-this" (click)="toggleAction(icontoggle, i,actLog.drop)">
